* unit test: Cleaned up testFormActivating unit test. [jddalton]

* Ensure Form#focusFirstElement skips Form.Element#activate if there is no first element. [Alexander Chernin, kangax]

* Rename confusing variables in Form.Element.Serializers.select(). [#180 state:resolved] [jddalton]

* Rewrite document.viewport methods getDimensions, getWidth, and getHeight to avoid browser sniffs, increase speed, and fix Opera 9.5 support. [#337 state:resolved] [jddalton, Nick Stakenburg]

* Fix Element#clonePosition issues with element margins, borders, and padding. Closes #11613. [azazel, jddalton, Nick Stakenburg]

* Minor clean-up to Element#cumulativeOffset and Element#positionedOffset. [jddalton]

* Fix Element#cumulativeScrollOffset for Opera 9.25/9.5. Closes #10486. [jddalton, Nick Stakenburg]

* Make Element#cumulativeScrollOffset stop calculating scroll position after a "fixed" positioned element. Closes #10869. [jddalton, kangax, watersco]

* Use Element#cumulativeScrollOffset in Element#viewportOffset to reduce code duplication. [jddalton]

* Make Element#absolutize account for margins, padding, and borders. Closes #8024, #9918. [chiefcll, jddalton, pphilipp, Nick Stakenburg]

* Make Element#relativize throw an error if Element#absolutize wasn't previously called. [Andrew Dupont, jddalton]

* Remove overly complex position code from Element#relativize and Element#absolutize. [jddalton]

* Make Element.extend() skip XML nodes to avoid errors in IE. Closes #9709. [jddalton, yanick.rochon]

* Rewrite String#escapeHTML and String#unescapeHTML to ensure more consistent output across browsers. Closes #8452. [jddalton, slusarz, Tobie Langel)

* Make sure Event#stopObserving works when passed non-string value as an eventName. [kangax]

* Cleaned up event.js renaming confusing/contradictory variable names [jddalton]

* Fix Event.stopObserving() IE error on elements with no observers. [jddalton]

* Prevent getEventID from assigning `window` and `document` an eventID. [jddalton]