@@ -25,6 +25,25 @@
     <input name="checky" type="hidden" value="0" />
   </div>
 
+  <div id="button_elements">
+    <button type="button" id="button_button" name="bu_button" value="1">
+      <img src="../fixtures/logo.gif"/>
+      Button
+    </button>
+    <button type="button" id="button_novalue" name="bu_novalue" >
+      <img src="../fixtures/logo.gif"/>
+      No Value
+    </button>
+    <button type="submit" id="button_submit" name="bu_submit" value="1">
+      <img src="../fixtures/logo.gif"/>
+      Submit
+    </button>
+    <button type="reset" id="button_reset" name="bu_reset" value="1">
+      <img src="../fixtures/logo.gif"/>
+      Reset
+    </button>
+  </div>
+
   <!-- all variations of SELECT controls -->
   <div id="selects_wrapper">
     <select name="vu">
